# personal-website

./: .editorconfig  CMakeLists.txt  Server.cpp
include/: ResponseFactory.hpp  Server.hpp
res/: index.html
